<resources>
    <string name="app_name">Activity Life Cycle</string>
    <string name="activity_a">Activity A</string>
    <string name="activity_b">Activity B</string>
    <string name="thread_counter">Thread Counter: </string>
    <string name="activity_b_desc">
        Activity B occupies the complete window real-estate.
        The Android OS forces Activity A to be paused.
        However, the background thread keeps incrementing the counter...
    </string>
    <string name="finish_b">Finish B</string>
    <string name="dialog_label">Simple Dialog</string>
    <string name="close">Close</string>


    <string name="start_b">Start Activity B</string>
    <string name="dialog">Dialog</string>
    <string name="close_app">Close App</string>


</resources>
